--- a/index.html
+++ b/index.html
@@ -4,11 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .container{
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .box{
+            height: 100px;
+            width: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+        }
+        .white{
+            background-color: wheat;
+            color: black;
+        }
+        .black{
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div>
         <input type="text" placeholder="Enter chessboard size....">
-        <button>Make</button>
+        <button onclick="Makechess()">Make</button>
     </div>
 </body>
+<script>   
+function Makechess(){
+    let size = document.querySelector("input").value;
+    let container = document.createElement("div");
+    container.classList.add("container");
+    container.style.height = `${size*100}px`;
+    container.style.width = `${size*100}px`;
+    for(let i = 0; i<size;i++) {
+        for(let j = 0;j<size;j++){
+            let box = document.createElement("div");
+            box.classList.add("box")
+            if((i+j)%2==0){
+                box.classList.add("black");
+                box.textContent = "#";
+            }
+            else {
+                box.classList.add("white");
+                box.textContent = "*";
+            }
+            container.appendChild(box);
+        }
+    }
+    document.body.appendChild(container);
+}
+    
+</script>
 </html>
